- Initial Commit since cloning this repo. - I've added support for AppCompatActivity onto this Library (locker). - Before, AppLockerActivity would extend "Activity" only; now extends "AppCompatActivity" which provides support for the support-v7 Android Library. - I also added support-v4 Android Library as a dependency in this library. - Also made a few corrections in relation to Android best practices, e.g. adding "contentDescription" on an ImageView.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,12 +14,12 @@
         android:id="@+id/bt_on_off"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18dp"/>
+        android:textSize="18sp"/>
 
     <Button
         android:id="@+id/bt_change"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/bt_on_off"
-        android:textSize="18dp"/>
+        android:textSize="18sp"/>
 </RelativeLayout>
